# FileSystem

./: CMakeLists.txt  README.md  main.cpp
Headers/: File.h  FileSystemNode.h  FileSystemRepresentator.h  FileSystemStructure.h  InputController.h  MetaData.h
Headers/Commands/: Command.h  CommandTypes.h  catConcatContent.cpp  catConcatContent.h  cdChangeDirectory.h  cpCopy.h  lsListDirectory.h  mkdirCreateDir.h  pwdFullPath.h  rmRemoveFile.h  rmdirDeleteEmptyDir.h
Headers/Files/: Directory.h  File.h  FileTypes.h  TxtFile.h
Source/: File.cpp  FileSystemNode.cpp  FileSystemRepresentator.cpp  FileSystemStructure.cpp  InputController.cpp  MetaData.cpp
Source/Commands/: Command.cpp  catConcatContent.cpp  cdChangeDirectory.cpp  cpCopy.cpp  lsListDirectory.cpp  mkdirCreateDir.cpp  pwdFullPath.cpp  rmRemoveFile.cpp  rmdirDeleteEmptyDir.cpp
Source/Files/: Directory.cpp  File.cpp  TxtFile.cpp
Testing/: test.txt
